# voltforge

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/.sqlx/: query-00fccbdbf22d5c5aa76bb38f48b976d9cbe8e306f1f96527dfc61cbfe165cb4e.json  query-0368467d39479799bf2deb1b3ce7f1a3a84a1724b81a35acec95e1fe1df918f7.json  query-04928d2956b467b18ef1dda02c7946fc73d153ae8cfd0561b11c6dc7c3e9a5de.json  query-0a52088cc0084930f92f88f9b4ed47ec25f6c204dc426f8e2fc88803fa9efa8d.json  query-0ae6cd474a609ef7756500c8b32c932b1b3558286442a8cf4dfc85060b15946b.json  query-0c59c943f148034618e21508c368a67d8f7868f5144e10bcf17b9cd15fe0aa47.json  query-1a54c2a0fd1e67619202ece4947d7c1e6fed0225e1d05366a0f0ca3124e05868.json  query-1aac7e44e11f31e323ccd7ec3388163ad9dc5273a8081393d719d60f66d5120b.json  query-1fbd8e723d2554a419a0a404a301600abc80a287b6f9ee0b3ac41674767ae3de.json  query-20c29c425f045678f56e2d229b9cc2d032837fa6352bd98b6ef3faf90b8efed1.json  query-2f1d4b5f48ecd5b3c7f33f9621a35e1292c7addb0ea278e9675bca0e59a9d9ac.json  query-2f27f2b02ccbe71fd70dd110d7292202fd798ba35ce34fc3a6458fc00be30891.json  query-49d7581ede8e2a6d88e4383928957f1a84322abb39c4b8c733ffbac33699f1fe.json  query-4d513baaaac32330b4ba1640ae113306f9c1e214a7fb644306ec0c77b1d41198.json  query-61669c9fa1fadb4e183a771a691a760b587c2fdcbc797bbe5442ba8a584ab757.json  query-6bbc9b4218c73b45b999a88a15e8f02d3ab20d7b7e6b906d602b5f50d25d8cbe.json  query-6fdcebf3d0114d73001ae1e86db0daf531015360b80663d5604aeec181177568.json  (+20 more)
backend/migrations/: 20240101000001_initial_schema.sql  (+7 more)
(+67 files in other folders)
